test:add apikey
