# docs/swagger.json
@@ -438,6 +438,11 @@
         },
         "/posts/{postId}/comments": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get comments for a post",
                 "consumes": [
                     "application/json"
